# TicTacToe

./: .gitignore
SDLGame/: CMakeLists.txt
SDLGame/res/: CMakeLists.txt
SDLGame/src/: CMakeLists.txt  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h
Xsi0/: CMakeLists.txt  main.cpp
